use vue-query for async api calls

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "core-js": "^3.6.5",
     "quasar": "^2.0.0",
     "vee-validate": "^4.5.2",
+    "vue-query": "^1.14.0",
     "vuex": "^4.0.1",
     "zod": "^3.11.6"
   },
